<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.mpc.pia</groupId>
	<artifactId>pia</artifactId>
	<version>1.5.4</version>
	<name>PIA - Protein Inference Algorithms</name>
	<url>https://github.com/mpc-bioinformatics/pia</url>

	<organization>
		<url>http://www.ruhr-uni-bochum.de/mpc/medical_bioinformatics</url>
		<name>Medizinisches Proteom-Center, Medical Bioinformatics</name>
	</organization>

	<developers>
		<developer>
			<id>julianu</id>
			<name>Julian Uszkoreit</name>
			<organization>Medizinisches Proteom-Center, Medical Bioinformatics</organization>
			<organizationUrl>http://www.ruhr-uni-bochum.de/mpc/medical_bioinformatics</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>Europe/Berlin</timezone>
		</developer>
		<developer>
			<id>ypriverol</id>
			<name>Yasset Perez-Riverol</name>
			<organization>EMBL-EBI</organization>
			<organizationUrl>http://www.ebi.ac.uk</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>Europe/London</timezone>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<log4j2.version>2.23.1</log4j2.version>
		<junit.version>4.13.2</junit.version>
		<commons-collections.version>4.4</commons-collections.version>
		<commons-text.version>1.12.0</commons-text.version>
		<jmzidentml.version>1.2.13</jmzidentml.version>
		<jmztab.version>3.0.8</jmztab.version>
		<pride-mod.version>2.1.12</pride-mod.version>
		<pride-jaxb.version>1.0.22</pride-jaxb.version>
		<xxindex.version>0.23</xxindex.version>
		<mascotdatfile.version>3.6.1</mascotdatfile.version>
		<xtandem-parser.version>1.13.0</xtandem-parser.version>
		<compomics-utilities.version>5.1.12</compomics-utilities.version>
		<biojava-ontology.version>7.1.1</biojava-ontology.version>
		<gson.version>2.11.0</gson.version>
		<picocli.version>4.7.6</picocli.version>
		<sqlite4java.version>1.0.392</sqlite4java.version>
		<sqlite-jdbc.version>3.46.0.0</sqlite-jdbc.version>
		<xercesImpl.version>2.12.2</xercesImpl.version>
		
		<!-- override dependencies from some packages to avoid vulnarabilities  -->
		<logback.version>1.5.6</logback.version>
		<jackson-annotations.version>2.17.1</jackson-annotations.version>
		<guava.version>33.2.1-jre</guava.version>
		<commons-codec.version>1.17.0</commons-codec.version>
		<commons-compress.version>1.26.2</commons-compress.version>
		<aircompressor.version>0.27</aircompressor.version>

		<!-- these are "internal" dependencies, the jar files are delivered together with the source -->
		<BaseLib.version>0.0.1-SNAPSHOT</BaseLib.version>
		<CvtBaseLib.version>0.0.1-SNAPSHOT</CvtBaseLib.version>
		<PDLibrary.version>0.0.1-SNAPSHOT</PDLibrary.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-1.2-api</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-jcl</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j2.version}</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-text</artifactId>
			<version>${commons-text.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>${commons-collections.version}</version>
		</dependency>

		<dependency>
			<groupId>uk.ac.ebi.jmzidml</groupId>
			<artifactId>jmzidentml</artifactId>
			<version>${jmzidentml.version}</version>
		</dependency>
		
		<!-- JAXB needs to be added for Java >= 9 -->
    	<dependency>
			<groupId>javax.xml.bind</groupId>
   			<artifactId>jaxb-api</artifactId>
    		<version>2.3.1</version>
		</dependency>
		
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.9</version>
		</dependency>
		
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>4.0.5</version>
		</dependency>
		<!-- JAXB additions --> 

		<!-- pride mod dependency -->
		<dependency>
			<groupId>uk.ac.ebi.pride.utilities</groupId>
			<artifactId>pride-mod</artifactId>
			<version>${pride-mod.version}</version>
		</dependency>
		
		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
			<version>8.5.12</version>
		</dependency>
		<!-- End pride mod dependency -->

		<!-- mzTab dependencies -->
		<dependency>
			<groupId>uk.ac.ebi.pride</groupId>
			<artifactId>jmztab-modular-model</artifactId>
			<version>${jmztab.version}</version>
		</dependency>
		<dependency>
			<groupId>uk.ac.ebi.pride</groupId>
			<artifactId>jmztab-modular-util</artifactId>
			<version>${jmztab.version}</version>
		</dependency>
		<dependency>
			<groupId>uk.ac.ebi.pride</groupId>
			<artifactId>jmztab-modular-converters</artifactId>
			<version>${jmztab.version}</version>
		</dependency>
		<!-- End mzTab dependencies-->

		<dependency>
			<groupId>uk.ac.ebi.pride.jaxb</groupId>
			<artifactId>pride-jaxb</artifactId>
			<version>${pride-jaxb.version}</version>
		</dependency>

		<!-- mascotdatfile wants to use a very old version, use newer instead -->
		<dependency>
			<groupId>psidev.psi.tools</groupId>
			<artifactId>xxindex</artifactId>
			<version>${xxindex.version}</version>
		</dependency>

		<dependency>
			<groupId>com.compomics</groupId>
			<artifactId>mascotdatfile</artifactId>
			<version>${mascotdatfile.version}</version>
		</dependency>
		<dependency>
			<groupId>de.proteinms.xtandemparser</groupId>
			<artifactId>xtandem-parser</artifactId>
			<version>${xtandem-parser.version}</version>
			<exclusions>
			<!-- these packages break Java 17 dependencies -->
				<exclusion> 
					<groupId>xpp3</groupId>
					<artifactId>xpp3</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.compomics</groupId>
			<artifactId>utilities</artifactId>
			<version>${compomics-utilities.version}</version>
			<exclusions>
				<!-- these packages break Java 17 dependencies -->
				<exclusion> 
					<groupId>org.ogce</groupId>
					<artifactId>xpp3</artifactId>
				</exclusion>
				<exclusion> 
					<groupId>org.apache.axis</groupId>
					<artifactId>axis-jaxrpc</artifactId>
				</exclusion>
				<!-- not needed (only visualization) and highly deprecated -->
				<exclusion>
					<groupId>umontreal.iro.lecuyer.gof</groupId>
					<artifactId>ssj</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
			<groupId>org.biojava</groupId>
			<artifactId>biojava-ontology</artifactId>
			<version>${biojava-ontology.version}</version>
		</dependency>
		
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>${picocli.version}</version>
		</dependency>
		
		<!-- shipped MPC libraries -->
		<dependency>
			<groupId>de.mpc</groupId>
			<artifactId>BaseLib</artifactId>
			<version>${BaseLib.version}</version>
		</dependency>
		<dependency>
			<groupId>de.mpc</groupId>
			<artifactId>CvtBaseLib</artifactId>
			<version>${CvtBaseLib.version}</version>
		</dependency>
		<dependency>
			<groupId>de.mpc</groupId>
			<artifactId>PDLibrary</artifactId>
			<version>${PDLibrary.version}</version>
		</dependency>
		<!-- End shipped MPC libraries -->

		<!-- SQlite support for MSF files -->
		<dependency>
			<groupId>com.almworks.sqlite4java</groupId>
			<artifactId>sqlite4java</artifactId>
			<version>${sqlite4java.version}</version>
		</dependency>
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>${sqlite-jdbc.version}</version>
		</dependency>
		<!-- End SQlite support for MSF files -->

		<!--  needed by some testcases and testscenarios -->
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>${xercesImpl.version}</version>
      		<scope>test</scope>
		</dependency>
		
		<!-- override dependencies to avoid vulnarabilities -->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
			<version>${jackson-annotations.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>${commons-codec.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>${commons-compress.version}</version>
		</dependency>
		<dependency>
			<groupId>io.airlift</groupId>
			<artifactId>aircompressor</artifactId>
			<version>${aircompressor.version}</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<excludes>
						<exclude>src/test</exclude>
						<exclude>src/test/*.class</exclude>
					</excludes>
					<archive>
						<manifestEntries>
							<Add-Opens>java.base/sun.reflect.annotation</Add-Opens>
						</manifestEntries>
						<index>true</index>
						<manifest>
							<!-- Adds the classpath to the created manifest -->
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<!-- Configures the main class of the application -->
							<mainClass>de.mpc.pia.PIACli</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<appendAssemblyId>false</appendAssemblyId>
					<descriptors>
						<descriptor>${project.basedir}/assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.11</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<argLine>${argLine} -Xmx2560m --add-opens java.base/sun.reflect.annotation=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
        <!-- Nexus EBI repo -->
        <repository>
            <id>nexus-ebi-release-repo</id>
            <name>The EBI Maven 2 Nexus release repository</name>
            <url>https://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
        </repository>
        
        <repository>
            <!-- This repo is required for cpdetector (required by jmzidml->pride-xml-handler->xxindex->cpdetector) and related libraries -->
            <!-- This is supplied here because of an HTTP 301 Permanent Redirect on the old URL that xxindex supplies, which breaks fresh builds. -->
            <id>sammoa-group</id>
            <url>https://nexus.nuiton.org/nexus/content/groups/sammoa-group/</url>
        </repository>

		<!-- UGent Genesis repository -->
        <repository>
            <id>genesis-maven2-repository</id>
            <name>Genesis maven2 repository</name>
            <url>https://genesis.ugent.be/maven2</url>
            <layout>default</layout>
        </repository>

		<!-- local files for the PD parser -->
		<repository>
			<id>pia-shipped-repo</id>
			<name>pia-shipped-repo</name>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<url>file://${project.basedir}/libs</url>
		</repository>
	</repositories>
</project>
